--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,8 @@
-FROM python:3
+FROM python:3.8
 
-RUN apt-get update -y 
-
-RUN apt-get install -y python-pip python-dev build-essential
-
-COPY ./requirements.txt /app/requirements.txt
-
-COPY . /app
+ADD . /app
 
 WORKDIR /app
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT [ "python" ]
-
-CMD [ "app.py" ]
